--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,25 +1,16 @@
 {% extends 'MopaBootstrapBundle::base_initializr.html.twig' %}
 
 {% block head_style %}
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-    {{ parent() }}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    {% stylesheets
-        '@PigassCoreBundle/Resources/public/css/main.css'
-        '@MopaBootstrapBundle/Resources/public/components/smalot-bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css'
+    {% stylesheets filter="cssrewrite,less"
+        '@MopaBootstrapBundle/Resources/public/less/mopabootstrapbundle-fa.less'
+        '@PigassCoreBundle/Resources/public/less/main.less'
     %}
     <link href="{{ asset_url }}" type="text/css" rel="stylesheet" media="screen" />
     {% endstylesheets %}
+    {% if diagnostic_mode %}
+        <link href="{{ asset('bundles/mopabootstrap/css/diagnostic.css') }}" type="text/css" rel="stylesheet" media="screen" />
+    {% endif %}
 {% endblock head_style %}
-
-{% block head_script %}
-    {% javascripts
-        'http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js'
-    %}
-    <script type="text/javascript" src="{{ asset_url }}"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    {% endjavascripts %}
-{% endblock head_script %}
 
 {% block title %}Adhésions{% endblock title %}
 
@@ -86,55 +77,13 @@
 {% endblock footer %}
 
 {% block foot_script_assetic %}
-
-{% block javascripts %}
-{% javascripts
-'@MopaBootstrapBundle/Resources/public/js/*.js'
-'@MopaBootstrapBundle/Resources/public/components/smalot-bootstrap-datetimepicker/js/bootstrap-datetimepicker.js'
-'@MopaBootstrapBundle/Resources/public/components/smalot-bootstrap-datetimepicker/js/locales/bootstrap-datetimepicker.fr.js'
-%}
-<script type="text/javascript" src="{{ asset_url }}"></script>
-{% endjavascripts %}
-
-<script type="text/javascript">
-    $(function(){
-        $('[data-provider="datepicker"]').datetimepicker({
-            autoclose: true,
-            format: 'dd/mm/yyyy',
-            language: 'fr',
-            minView: 'month',
-            pickerPosition: 'bottom-left',
-            todayBtn: true,
-            startView: 'month'
-        });
-
-        $('[data-provider="datetimepicker"]').datetimepicker({
-            autoclose: true,
-            format: 'dd/mm/yyyy hh:ii',
-            language: 'fr',
-            pickerPosition: 'bottom-left',
-            todayBtn: true
-        });
-
-        $('[data-provider="timepicker"]').datetimepicker({
-            autoclose: true,
-            format: 'hh:ii',
-            formatViewType: 'time',
-            maxView: 'day',
-            minView: 'hour',
-            pickerPosition: 'bottom-left',
-            startView: 'day'
-        });
-
-        // Restore value from hidden input
-        $('input[type=hidden]', '.date').each(function(){
-            if($(this).val()) {
-                $(this).parent().datetimepicker('setValue');
-            }
-        });
-
-    });
-</script>
-{% endblock javascripts %}
-
+    {{ parent() }}
+    {% block javascripts %}
+        {% javascripts
+            '@MopaBootstrapBundle/Resources/public/bootstrap/js/*.js'
+            '@PigassCoreBundle/Resources/public/js/*.js'
+        %}
+        <script type="text/javascript" src="{{ asset_url }}"></script>
+        {% endjavascripts %}
+    {% endblock javascripts %}
 {% endblock foot_script_assetic %}
