Correction des déclarations de font-awesome 4

--- a/src/Pigass/CoreBundle/Resources/public/less/main.less
+++ b/src/Pigass/CoreBundle/Resources/public/less/main.less
@@ -7,6 +7,8 @@
  * See LICENSE file or http://www.gnu.org/licenses/gpl.html
 */
 
+@import "../../../../../../vendor/mopa/bootstrap-bundle/Mopa/Bundle/BootstrapBundle/Resources/public/less/mopabootstrapbundle-fa4.less";
+
 html { }
 body { font: 13px arial, sans-serif; background-color: #AAAAAA; margin: 0; padding: 0;}
 img { border: none; }
