--- a/src/Pigass/UserBundle/Resources/views/Register/questionEdit.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Register/questionEdit.html.twig
@@ -7,7 +7,7 @@
 {% block action %}
     <li class="btn btn-primary">
         <a href="{{ path('user_register_question_index', {'slug': slug}) }}" title="Retour à la liste des questions complémentaires">
-            {{ icon('hand-left') }} Retour
+            {{ icon('hand-point-left') }} Retour
         </a>
     </li>
 {% endblock %}
