--- a/src/Pigass/CoreBundle/Resources/views/Receipt/index.html.twig
+++ b/src/Pigass/CoreBundle/Resources/views/Receipt/index.html.twig
@@ -31,8 +31,8 @@
         {% for receipt in receipts %}
             <li class="entity receipt list-group-item row">
                 {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_STRUCTURE') %}
-                    <span class="btn-group pull-right">
-                        <button class="btn btn-primary dropdown-toogle" data-toggle="dropdown">Actions <span class="caret"></span></button>
+                    <span class="pull-right">
+                        <button class="btn btn-primary dropdown-toogle" data-toggle="dropdown">{{ icon('bars') }} <span class="caret"></span></button>
                         <ul class="dropdown-menu">
                             <li class="action">
                                 <a href="{{ path('core_receipt_edit', {'slug': structure.slug, 'id': receipt.id}) }}" title="Modifier l'émetteur de reçu fiscal '{{ receipt.imageName }}'" class="edit">
