--- a/src/Pigass/CoreBundle/Resources/views/Structure/index.html.twig
+++ b/src/Pigass/CoreBundle/Resources/views/Structure/index.html.twig
@@ -29,8 +29,8 @@
         {% for structure in structures %}
             <li class="entity structure list-group-item row">
                 {% if is_granted('ROLE_ADMIN') %}
-                    <span class="btn-group pull-right">
-                        <button class="btn btn-primary dropdown-toogle" data-toggle="dropdown">Actions <span class="caret"></span></button>
+                    <span class="pull-right">
+                        <button class="btn btn-primary dropdown-toogle" data-toggle="dropdown">{{ icon('bars') }} <span class="caret"></span></button>
                         <ul class="dropdown-menu">
                             <li class="action">
                                 <a href="{{ path('user_register_index', {'slug': structure.slug}) }}" title="Afficher les adhérents de la structure '{{ structure.name }}'" class="index">
