--- a/src/Pigass/UserBundle/Resources/views/Payment/index.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Payment/index.html.twig
@@ -22,8 +22,8 @@
     <ul class="entities gateways list-group panel panel-default">
         {% for gateway in gateways %}
             <li class="entity gateway list-group-item row">
-                <span class="btn-group pull-right">
-                    <button class="btn btn-primary dropdown-toogle" data-toggle="dropdown">Actions <span class="caret"></span></button>
+                <span class="pull-right">
+                    <button class="btn btn-primary dropdown-toogle" data-toggle="dropdown">{{ icon('bars') }} <span class="caret"></span></button>
                     <ul class="dropdown-menu">
                         <li class="action">
                             <a href="{{ path('user_payment_edit', {'id': gateway.id, 'slug': structure.slug}) }}" title="Modifier le moyen de paiement '{{ gateway.gatewayName }}'" class="edit">
