--- a/src/Pigass/UserBundle/Resources/views/Register/list.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Register/list.html.twig
@@ -84,7 +84,7 @@
     <ul class="entities list-group">
         {% for membership in memberships %}
             <li class="list-group-item row col-lg-4 col-md-6 col-sm-12">
-                <span class="btn-group pull-right">
+                <span class="pull-right">
                     <button class="btn btn-primary dropdown-toogle" data-toggle="dropdown">{{ icon('bars') }} <span class="caret"></span></button>
                     <ul class="dropdown-menu">
                         <li>
