#38 Fusion de l'inscription et de l'adhésions pour les nouvelles inscriptions

--- a/src/Pigass/CoreBundle/Resources/views/Structure/map.html.twig
+++ b/src/Pigass/CoreBundle/Resources/views/Structure/map.html.twig
@@ -80,7 +80,7 @@
                         </a>
                     </li>
                     <li class="btn btn-primary">
-                        <a href="{{ path('user_register_membership_new', {'slug': structure.slug}) }}" title="Ajouter un adhérent à la structure '{{ structure.name }}'" class="">
+                        <a href="{{ path('user_register_register', {'slug': structure.slug}) }}" title="Ajouter un adhérent à la structure '{{ structure.name }}'" class="">
                             {{ icon('plus') }} Ajouter un adhérent
                         </a>
                     </li>
