--- a/src/Pigass/UserBundle/Resources/views/Register/index.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Register/index.html.twig
@@ -25,7 +25,7 @@
         </a>
     </li>
     <li class="btn btn-primary">
-        <a href="{{ path('user_register_membership_new', {'slug': slug}) }}" title ="Ajouter un adhérent">
+        <a href="{{ path('user_register_register', {'slug': slug}) }}" title ="Ajouter un adhérent">
             {{ icon('user-plus') }} Ajouter
         </a>
     </li>
