--- a/src/Pigass/CoreBundle/Resources/views/Structure/index.html.twig
+++ b/src/Pigass/CoreBundle/Resources/views/Structure/index.html.twig
@@ -38,7 +38,7 @@
                                 </a>
                             </li>
                             <li class="action">
-                                <a href="{{ path('user_register_membership_new', {'slug': structure.slug}) }}" title="Ajouter un adhérent à la structure '{{ structure.name }}'" class="">
+                                <a href="{{ path('user_register_register', {'slug': structure.slug}) }}" title="Ajouter un adhérent à la structure '{{ structure.name }}'" class="">
                                     {{ icon('user-plus') }} Ajouter
                                 </a>
                             </li>
