--- a/src/Pigass/UserBundle/Resources/views/Payment/confirmPrint.txt.twig
+++ b/src/Pigass/UserBundle/Resources/views/Payment/confirmPrint.txt.twig
@@ -1,7 +1,5 @@
-Votre adhésion à {{ membership.structure.name }} a été validée.
+Votre adhésion à {{ membership.structure.name }} a été validée le {{ membership.payedOn|date('d-m-Y') }}.
 
 La fiche d'adhésion à {{ membership.structure.name }} a été correctement reçue et enregistrée.
 
-L'adhésion a été complètement validée le {{ membership.payedOn|date('d-m-Y') }}.
-
-Ce message a été généré automatiquement par le portail d'adhésions.
+Ce message a été généré automatiquement par le portail d'adhésions. Merci de ne pas y répondre.
