--- a/src/Pigass/UserBundle/Resources/views/Register/validate.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Register/validate.html.twig
@@ -1,6 +1,6 @@
 {% extends 'PigassCoreBundle::layout.html.twig' %}
 
-{% block headline %}Adhésion - validation{% endblock %}
+{% block headline %}Adhésion : {{ membership.person }}{% endblock %}
 
 {% block content %}
     <div class="panel panel-default">
