--- a/src/Pigass/UserBundle/Resources/views/Person/editMe.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Person/editMe.html.twig
@@ -13,7 +13,10 @@
 {% endblock %}
 
 {% block content %}
-    <div class="panel panel-default">
-        {{ form(form) }}
+    <div class="panel panel-default row">
+        <form method="POST">
+            {{ form_widget(form) }}
+            <button type="submit" class="btn btn-primary pull-right">Enregistrer</button>
+        </form>
     </div>
 {% endblock %}
