--- a/src/Pigass/UserBundle/Resources/views/Person/editMe.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Person/editMe.html.twig
@@ -14,9 +14,9 @@
 
 {% block content %}
     <div class="panel panel-default row">
-        <form method="POST">
+        <form method="POST" class="form-horizontal" role="form">
             {{ form_widget(form) }}
-            <button type="submit" class="btn btn-primary pull-right">Enregistrer</button>
+            <button type="submit" class="btn btn-default pull-right">Enregistrer</button>
         </form>
     </div>
 {% endblock %}
