--- a/src/Pigass/UserBundle/Resources/views/Register/question.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Register/question.html.twig
@@ -7,7 +7,7 @@
 {% block action %}
     {% if ato == true %}
         <li class="btn btn-primary">
-            <a href="{{ path('user_register_list', {'skip': true}) }}" title="Passer cette étape">
+            <a href="{{ path('user_register_list', {'skip': true, 'userid': person.user.id}) }}" title="Passer cette étape">
                 {{ icon('fast-forward') }} Passer
             </a>
         </li>
